# rules_grafana

./: DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl
.github/workflows/: ci.yml
config/: BUILD.bazel  grafana-values.yaml
private/manifests/: BUILD.bazel  grafana.yaml
tests/: BUILD.bazel  analysis_tests.bzl  health_wrapper.sh  install_wrapper.sh  smoke_test.sh
tools/: BUILD.bazel  extensions.bzl  render_grafana.sh  repositories.bzl  versions.bzl  writeback.sh
